@startuml
'https://plantuml.com/class-diagram

package entities {
    note "All classes will need\ngetters and setters\nfor all their attributes" as N1
    class Activities {
     - id: int
     - name: String
     - hobby: Hobby
     - persons: List<Person>
     - address: Address
     - date: Date
     + getters()
     + setters()
    }
    class ChatGroup {
         - id: int
         - hobby: Hobby
         - persons: List<Person>
         + getters()
         + setters()
        }
    class Person {
     - id: int
     - email: String
     - firstName: String
     - lastName: String
     - hobby: List<Hobby>
     - activities: List<Activities>
     + getters()
     + setters()
     + showSchedule(): String
     + getDistanceToActivities(): String
    }
    note right of Person: "showSchedule returns a \nstring of the date/time, name\nand hobby of all activities"
    note "getDistanceToActivities() returns a \nstring with the distances between the\npersons address and the addresses of \nthe various activities" as n2
        class Hobby {
     - name: String
     - description: String
     + getters()
     + setters()
    }
    class Phone {
     - number: String
     - description: String
     + getters()
     + setters()
    }
    class Address {
     - Street: String
     - AdditionalInfo: String
     + getters()
     + setters()
     + getDistanceTo(Address): String
    }
    class CityInfo {
     - zipCode: String
     - city: String
     + getters()
     + setters()
    }

}



Person o-- Hobby
Person *-- Phone
Person o-- Address
Address o-- CityInfo
Activities o-- Person
Activities o-- Hobby
Activities o-- Address
ChatGroup o-- Person
ChatGroup o-- Hobby

Person ... n2


@enduml